--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
     <link rel="shortcut icon" href="favicon.jpg" />
     <link rel="stylesheet" href="styles.css" />
   </head>
-  <body></body>
+  <body>
+    <h1>ÍNDICE DE TRABAJOS DEL PRECURSO</h1>
+  </body>
 </html>
