se añade anchors de todos los archivos .js o .html

--- a/index.html
+++ b/index.html
@@ -9,5 +9,27 @@
   </head>
   <body>
     <h1>ÍNDICE DE TRABAJOS DEL PRECURSO</h1>
+    <ol>
+      <li><a href="precurso/1-calculadora/calculator.js">CALCULADORA</a></li>
+      <li>
+        <a href="precurso/2-calculadora-pro/calculator-pro.js"
+          >CALCULADORA PRO</a
+        >
+      </li>
+      <li><a href="precurso/3-airlines/airlines.js">AIRLINES</a></li>
+      <li>
+        <a href="precurso/4-airlines-pro/airlines-pro.js">AIRLINES PRO</a>
+      </li>
+      <li><a href="precurso/5-bingo/bingo.js">BINGO</a></li>
+      <li><a href="precurso/6 pasapalabra/pasapalabra.js">PASAPALABRA</a></li>
+      <li>
+        <a href="precurso/7-calculadora-html/calculadora.html"
+          >CALCULADORA HTML</a
+        >
+      </li>
+      <li>
+        <a href="precurso/8 pasapalabra/pasapalabra.html">PASAPALABRA HTML</a>
+      </li>
+    </ol>
   </body>
 </html>
