se modifican los archivos html de todos los ejercicios

--- a/precurso/1-calculadora/inicio.html
+++ b/precurso/1-calculadora/inicio.html
@@ -1,21 +1,8 @@
 ﻿<!DOCTYPE html>
 <html>
-
 <head>
 </head>
-
 <body>
-
-<p>prueba de párrafo html</p>
-
-<script type="text/javascript" src="calculator.js">
-
-//  ejecutarCalculatorPro();
-
-</script>
-
+  <script type="text/javascript" src="calculator.js"></script>
 </body>
-
-
-
 </html>
