--- a/precurso/6 pasapalabra/inicio.html
+++ b/precurso/6 pasapalabra/inicio.html
@@ -3,6 +3,6 @@
 <head>
 </head>
 <body>
-  <script type="text/javascript" src="calculator-pro.js"></script>
+  <script type="text/javascript" src="pasapalabra.js"></script>
 </body>
 </html>
