--- a/index.html
+++ b/index.html
@@ -10,25 +10,21 @@
   <body>
     <h1>ÍNDICE DE TRABAJOS DEL PRECURSO</h1>
     <ol>
-      <li><a href="precurso/1-calculadora/calculator.js">CALCULADORA</a></li>
+      <li><a href="precurso/1-calculadora/index.html">CALCULADORA</a></li>
       <li>
-        <a href="precurso/2-calculadora-pro/calculator-pro.js"
-          >CALCULADORA PRO</a
-        >
+        <a href="precurso/2-calculadora-pro/index.html">CALCULADORA PRO</a>
       </li>
-      <li><a href="precurso/3-airlines/airlines.js">AIRLINES</a></li>
+      <li><a href="precurso/3-airlines/index.html">AIRLINES</a></li>
       <li>
-        <a href="precurso/4-airlines-pro/airlines-pro.js">AIRLINES PRO</a>
+        <a href="precurso/4-airlines-pro/index.html">AIRLINES PRO</a>
       </li>
-      <li><a href="precurso/5-bingo/bingo.js">BINGO</a></li>
-      <li><a href="precurso/6 pasapalabra/pasapalabra.js">PASAPALABRA</a></li>
+      <li><a href="precurso/5-bingo/index.html">BINGO</a></li>
+      <li><a href="precurso/6 pasapalabra/index.html">PASAPALABRA</a></li>
       <li>
-        <a href="precurso/7-calculadora-html/calculadora.html"
-          >CALCULADORA HTML</a
-        >
+        <a href="precurso/7-calculadora-html/index.html">CALCULADORA HTML</a>
       </li>
       <li>
-        <a href="precurso/8 pasapalabra/pasapalabra.html">PASAPALABRA HTML</a>
+        <a href="precurso/8 pasapalabra/index.html">PASAPALABRA HTML</a>
       </li>
     </ol>
   </body>
